--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
                 <div class="column">
                     <div class="side-widget">
                         <h3 style="border-bottom: 1px solid #000; margin-bottom: 5px;">HOROSCOPE</h3>
-                        <p style="font-size: 13px;"><strong>CAPRICORN:</strong> A digital puzzle on the back page will reveal a significant message today. Don't overthink the green tiles.</p>
+                        <p style="font-size: 13px;"><strong>VIRGO:</strong> A digital puzzle on the back page will reveal a significant message today. Don't overthink the green tiles.</p>
                     </div>
                     
                     <div class="classifieds">
@@ -242,10 +242,10 @@
     <!-- PHASE 2: EDITORIAL -->
     <section id="letter-view" class="hidden">
         <div style="font-size: 19px; line-height: 1.8;">
-            <p>Dearest Aaradhya,</p>
+            <p>Dear Aaradhya,</p>
             <br>
             <p>I know it’s just a regular Monday, but looking at you makes every day feel like front-page news. I wanted to create something that captures how lucky I feel to have you in my life.</p>
-            <p>If you turn to the back page, you’ll find our Daily Connection puzzle. I’ve hidden a very specific message for you there.</p>
+            <p>If you turn to the back page, you’ll find our Daily Connection puzzle. I’ve have a very specific message for you there.</p>
             <br>
             <p>Yours always,</p>
             <div class="signature">Niv</div>
