--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
             <h1>The Girlfriend Times</h1>
             <div class="motto">"All the Love That's Fit to Print"</div>
             <div class="date-bar">
-                <span>NEW YORK EDITION</span>
+                <span>NIV EDITION</span>
                 <span>MONDAY, JANUARY 12, 2026</span>
                 <span>PRICE: ONE KISS</span>
             </div>
@@ -224,7 +224,7 @@
                     
                     <div class="classifieds">
                         <div class="classified-item"><b>WANTED:</b> Someone to spend every Monday morning with. <b>FOUND:</b> Aaradhya.</div>
-                        <div class="classified-item"><b>LOST:</b> Niv's ability to act normal when she's in the room. <b>REWARD:</b> Her smile.</div>
+                        <div class="classified-item"><b>LOST:</b> Niv's ability to act normal when she's around. <b>REWARD:</b> Her smile.</div>
                         <div class="classified-item"><b>PUBLIC NOTICE:</b> Niv is the luckiest man in the 212 area code.</div>
                     </div>
 
