--- a/index.html
+++ b/index.html
@@ -332,7 +332,7 @@
     <main id="paper-container">
         <header class="masthead">
             <h1>The Girlfriend Times</h1>
-            <div class="motto">"All the Love That's Fit to Print"</div>
+            <div class="motto">All the Love That's Fit to Print</div>
             <div class="date-bar">
                 <span>Niv Edition</span>
                 <span class="date-center">Monday, January 12, 2026</span>
@@ -385,7 +385,7 @@
     <!-- PHASE 2: EDITORIAL -->
     <section id="letter-view" class="hidden">
         <div style="font-size: 19px; line-height: 1.8;">
-            <p>Dear Aaradhya,</p>
+            <p>dear aaradhya,</p>
             <br>
             <p>i know it’s just a regular monday, but looking at you makes every day feel like front-page news. i wanted to make something that captures how lucky i feel to have you in my life.</p>
             <p>if you turn to the back page, you’ll find our daily connection puzzle. i have a very specific message for you there.</p>
